--- a/simple.html
+++ b/simple.html
@@ -3,7 +3,7 @@
 	Copyright git training
 -->
 <head>
-	<title>An example website</title>
+	<title>A Great website</title>
 	<link rel="stylesheet" href="css/bootstrap.min.css">
 	<style>
 		body {
@@ -17,7 +17,7 @@
 	<main class="container">
 	<!-- Content Goes Here -->
 		<p>
-			Just some content
+			Just some content, hipster ipsum filleer
 		</p>
 	</main>
 	<footer class="container">
