Adding conflicting changes on purpoes for GIT training

--- a/simple.html
+++ b/simple.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <head>
-	<title>An exciting new website</title>
+	<title>A brand new website</title>
 	<link rel="stylesheet" href="css/bootstrap.min.css">
 	<style>
 		body {
@@ -15,7 +15,7 @@
 	<!-- Content Goes Here -->
 		<p>
 			Just some content, adding more content to create a conflict, hipster ipsum
-			imspum more content
+			imspum more content. Did I create the conflict yet?
 		</p>
 	</main>
 	<footer class="container">
