mb before rebase conflicts

--- a/simple.html
+++ b/simple.html
@@ -1,4 +1,9 @@
-<!DOCTYPE html>
+<!DOCTYPE html> 
+<!--
+ Copyright 2020 Git.Training
+ Adding changes before rebasing conflicts
+-->
+
 <head>
 	<title>A brand new website</title>
 	<link rel="stylesheet" href="css/bootstrap.min.css">
