mb conflicting changes to simple.html

--- a/simple.html
+++ b/simple.html
@@ -5,7 +5,7 @@
 -->
 
 <head>
-	<title>A brand new website</title>
+	<title>Conflicting change website</title>
 	<link rel="stylesheet" href="css/bootstrap.min.css">
 	<style>
 		body {
