Adding more changes while using the stash command

--- a/simple.html
+++ b/simple.html
@@ -5,7 +5,7 @@
 -->
 
 <head>
-	<title>Conflicting change website</title>
+	<title>Update title for stash</title>
 	<link rel="stylesheet" href="css/bootstrap.min.css">
 	<style>
 		body {
@@ -19,8 +19,7 @@
 	<main class="container">
 	<!-- Content Goes Here -->
 		<p>
-			Just some content, adding more content to create a conflict, hipster ipsum
-			imspum more content. Did I create the conflict yet?
+			Adding more imformation 
 		</p>
 	</main>
 	<footer class="container">
